
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
int islower(int c)
{
    if ((c < 'a') || (c > 'z'))
        return 0;



    return 1;
}
